  previous GNU Info document.

* Increased the granularity of the error codes returned by kyua(1) to
  denote different error conditions.  This avoids the overload of '1'
  to indicate both "expected" errors from specific subcommands from
  unexpected errors caused by the internals of the code.  The manual
  now correctly explain how the exit codes behave on a command basis.


Changes in version 0.5
======================

Experimental version released on July 10th, 2012.

* Issue 15: Added automatic stacktrace gathering of crashing test cases.
  This relies on GDB and is a best-effort operation.

* Issue 32: Added the '--build-root' option to the debug, list and test
  commands.  This allows executing test programs from a different
  directory than where the Kyuafile scripts live.  See the 'Build roots'
  section in the manual for more details.

* Issue 33: Removed the kyuaify.sh script.  This has been renamed to
  atf2kyua and moved to the kyua-atf-compat module, where it ships as a
  first-class utility (with a manual page and tests).

* Issue 34: Changed the HTML reports to include the stdout and stderr of
  every test case.

* Fixed the build when using a "build directory" and a clean source tree
  from the repository.


Changes in version 0.4
======================

Experimental version released on June 6th, 2012.

* Added the 'report-html' command to generate HTML reports of the
  execution of any recorded action.

* Changed the '--output' flag of the 'report' command to only take a
  path to the target file, not its format.  Different formats are better
  supported by implementing different subcommands, as the options they
  may receive will vary from format to format.

* Added a '--with-atf' flag to the configure script to control whether
  the ATF tests get built or not.  May be useful for packaging systems
  that do not have ATF in them yet.  Disabling ATF also cuts down the
  build time of Kyua significantly, but with the obvious drawbacks.
